--- a/assignment #5/style.css
+++ b/assignment #5/style.css
@@ -18,6 +18,7 @@ li {
 .navBtn a{
     background-color: crimson;
     color: white;
+    border-radius: 10px;
 }
 .navLink a {
     display: block;
@@ -27,10 +28,31 @@ li {
     text-decoration: none;
     font-size: 20px;
 }
-
-.foodItems {
-    text-align: center;
+.navLink a:hover {
+    background-color: crimson;
+    color: white;
+    opacity: 0.7;
+    border-radius: 10px;
 }
-.Suggest{
+
+.heading {
     text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 52px;
+    color: crimson;
+}
+.foodItems{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+}
+.foodItems img{
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    margin: 20px;
+}
+.foodItems h2{
+    font-family: 'Courier New', Courier, monospace;
+    color: crimson;
 }
