--- a/assignment #6/style.css
+++ b/assignment #6/style.css
@@ -1,16 +1,9 @@
 .container {
-    width: 100px;
-    height: 100px;
-    position: relative;
-    background-color: red;
-    animation-name: example;
-    animation-duration: 4s;
-    animation-timing-function: ease;
-  }
+    background-color: teal;
+    font-size: 12px;
+    animation: example 4s ease-in-out ;
+}
 @keyframes example {
-    0%   {background-color:red; left:0px; top:0px;}
-  25%  {background-color:yellow; left:200px; top:0px;}
-  50%  {background-color:blue; left:200px; top:200px;}
-  75%  {background-color:green; left:0px; top:200px;}
-  100% {background-color:red; left:0px; top:0px;}
-  }
+    from {font-size: 12px;}
+    to {font-size: 52px;}
+}
