--- a/assignment #7/style.css
+++ b/assignment #7/style.css
@@ -15,3 +15,35 @@ body {
 .sayHelloBtn:hover {
     background-color: burlywood !important;
 }
+.profileImg {
+    text-align: center;
+    justify-content: center;
+}
+.profileImg img{
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    margin: 20px;
+}
+.aboutSection {
+    width: 100%;
+    height: 70vh;
+    margin: 0px auto;
+    background-image: url("https://media.istockphoto.com/vectors/gradient-blob-abstract-background-vector-id1282505760?k=6&m=1282505760&s=612x612&w=0&h=3qdPxcMLplq-nJIFftwBbPci7L8k8EN70C-rqEB7CGM=");
+    background-repeat: no-repeat;
+    background-size: cover;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+.glass{
+    margin: 100px;
+    color: #ecf0f1;
+    border-radius: 8px;
+    padding: 20px;
+    background: rgba( 255, 255, 255, 0.2 );
+    border: solid 1px rgba(255,255,255,.3);
+    backdrop-filter: blur(10px );
+    text-align: center;
+    justify-content: center;
+}
