--- a/assignment #7/style.css
+++ b/assignment #7/style.css
@@ -64,8 +64,8 @@ body {
     display: flex;
 }
 .recentWork img{
-    width: 90%;
-    height: auto;
+    width: 300px;
+    height: 200px;
     border-radius: 10px;
     margin: 20px;
 }
@@ -92,4 +92,11 @@ body {
     height: 200px;
     border-radius: 100px;
     margin: 20px;
+}
+.footer2{
+    display: flex;
+    width: 80%;
+    height: 100px;
+    background-color: blue;
+    margin: 0 auto;
 }
