--- a/assignment #7/style.css
+++ b/assignment #7/style.css
@@ -94,9 +94,24 @@ body {
     margin: 20px;
 }
 .footer2{
-    display: flex;
+    margin: auto;
     width: 80%;
-    height: 100px;
-    background-color: blue;
-    margin: 0 auto;
+    padding: 10px;
+    background-color: black;
+    color: white;
+    align-items: center;
+}
+.footer2Align{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin: 40px;
+    padding: 10px;
+}
+.letsDoThis{
+    border: 1px solid blue !important;
+    background-color: black;
+    color: white;
+    border-radius: 25px !important;
+    padding: 10px 25px 10px 25px !important;
 }
