--- a/assignment #7/style.css
+++ b/assignment #7/style.css
@@ -27,11 +27,10 @@ body {
 }
 .aboutSection {
     width: 100%;
-    height: 70vh;
+    min-height: 70vh;
+    max-height: auto;
     margin: 0px auto;
-    background-image: url("https://media.istockphoto.com/vectors/gradient-blob-abstract-background-vector-id1282505760?k=6&m=1282505760&s=612x612&w=0&h=3qdPxcMLplq-nJIFftwBbPci7L8k8EN70C-rqEB7CGM=");
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: blue;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -39,11 +38,10 @@ body {
 .glass{
     margin: 100px;
     color: #ecf0f1;
-    border-radius: 8px;
+    border-radius: 15px;
     padding: 20px;
-    background: rgba( 255, 255, 255, 0.2 );
-    border: solid 1px rgba(255,255,255,.3);
-    backdrop-filter: blur(10px );
+    background: blue;
+    border: solid 3px rgba(255,255,255,.3);
     text-align: center;
     justify-content: center;
 }
@@ -62,6 +60,9 @@ body {
 }
 .recentWork{
     display: flex;
+}
+.recentWork2>div{
+    padding: 20px;
 }
 .recentWork img{
     width: 300px;
@@ -102,6 +103,9 @@ body {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 40px;
+    position: relative;
+    top: 60px;
+    border-radius: 15px;
 }
 .footer2Align{
     text-align: center;
@@ -109,7 +113,7 @@ body {
     justify-content: center;
 }
 .letsDoThis{
-    border: 3px solid blue !important;
+    border: 3px solid white !important;
     background-color: black;
     color: white;
     border-radius: 25px !important;
@@ -119,6 +123,7 @@ body {
     width: 100%;
     height: auto;
     background-color: blue;
+    color: white;
     text-align: center;
     padding: 100px;
 }
@@ -127,7 +132,8 @@ body {
     width: 80px;
     margin: 20px;
     height: 80px;
+    color: white;
     padding: 15px 0;
     border-radius: 40px;
-    border: 1px solid black;
+    border: 1px solid white;
 }
