--- a/assignment #7/style.css
+++ b/assignment #7/style.css
@@ -13,7 +13,8 @@ body {
     border: 2px solid black !important;
 }
 .sayHelloBtn:hover {
-    background-color: burlywood !important;
+    background-color: blue !important;
+    color: white;
 }
 .profileImg {
     text-align: center;
