--- a/assignment #7/style.css
+++ b/assignment #7/style.css
@@ -13,7 +13,7 @@ body {
     border: 2px solid black !important;
 }
 .sayHelloBtn:hover {
-    background-color: blue !important;
+    background-color: black !important;
     color: white;
 }
 .profileImg {
@@ -31,7 +31,7 @@ body {
     min-height: 70vh;
     max-height: auto;
     margin: 0px auto;
-    background-color: blue;
+    background-color: black;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -41,7 +41,7 @@ body {
     color: #ecf0f1;
     border-radius: 15px;
     padding: 20px;
-    background: blue;
+    background: black;
     border: solid 3px rgba(255,255,255,.3);
     text-align: center;
     justify-content: center;
@@ -115,7 +115,7 @@ body {
 }
 .letsDoThis{
     border: 3px solid white !important;
-    background-color: black;
+    background-color: blue;
     color: white;
     border-radius: 25px !important;
     padding: 10px 25px 10px 25px !important;
