--- a/assignment#17/style.css
+++ b/assignment#17/style.css
@@ -1,4 +1,4 @@
-h1 {
+.mainDiv {
   font-size: xx-large;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   text-align: center;
